fixed scrollbar thingy

--- a/assets/base.css
+++ b/assets/base.css
@@ -4,10 +4,28 @@ body {
     align-items: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-size: 250px, 250px;
-    padding:0px;
-    margin:0px;
+    padding: 0px;
+    margin: 0px;
+}
 
-} 
+html {
+    overflow: overlay;
+    overflow-x: hidden
+}
+::-webkit-scrollbar {
+    background-color: transparent;
+    width: 15px;
+  }
+::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    border: 4px solid transparent;
+    background-color: rgba(0,0,0,0.2);
+    background-clip: content-box;
+  }
+
 
 a {
     font-weight: 700;
@@ -22,7 +40,8 @@ a:hover {
 }
 
 #NavBar {
-    margin: 0.5rem;
+    margin: 0px;
+    margin-bottom: 0.5rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     display: flex;
@@ -46,59 +65,70 @@ a:hover {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
+    margin: 0px;
+    padding: 0px;
+    width:100vw
 }
 
-.content {
+.page {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 1rem;
     border-radius: 12px;
-    width: 70rem;
+    width: 100vw;
     max-width: 100vw;
 }
 
-.content h1 {
+.page h1 {
     color: white;
     text-shadow: 2px 3px 10px black;
 }
+
 #homeButton {
     box-shadow: 2px 3px 20px black;
     background: #7dc0ff50;
     position: absolute;
-    width:100%;
+    top: 0rem;
+    left: 0rem;
+    width: 100vw;
     height: 4.5rem;
     z-index: 100;
 }
+
 #homeButton p {
     margin: 0.5rem;
 }
+
 #homeButton h1 {
     margin: 1rem;
 
 }
+
 .ImageCard {
     width: 20rem;
     position: relative;
     box-shadow: 2px 3px 10px black;
     border-radius: 12px;
     margin: 0.5rem;
-    display:flex;
+    display: flex;
     flex-grow: 1;
-    
+
 }
+
 #section {
-    display:flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     flex-grow: 1;
     width: 20rem;
 }
+
 .TextCard {
     position: relative;
     box-shadow: 2px 3px 10px black;
     border-radius: 12px;
-    display:flex;
+    display: flex;
     flex-flow: row wrap;
     flex-grow: 1;
     max-width: 90%;
